--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -50,14 +50,14 @@
 						<h2 class="card__title">Бэкенд-антистресс</h2>
 						<p class="card__text">Если планируете решать задачи в тренажёре, берите два.</p>
 						<div class="card__row">
-							<button class="button">В корзину</button>
+							<button class="button">Купить</button>
 							<span class="card__price">1000 синапсов</span>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> 
 
 	<div class="modal">
 		<div class="modal__container">
@@ -93,8 +93,7 @@
 			</div>
 		</div>
 	</div>
-
-	<div class="modal">
+ <div class="modal">
 		<div class="modal__container">
 			<button class="modal__close" aria-label="закрыть"></button>
 			<div class="modal__content">
@@ -118,7 +117,7 @@
 				</form>
 			</div>
 		</div>
-	</div>
+	</div> 
 
 	<div class="modal">
 		<div class="modal__container">
@@ -181,7 +180,7 @@
 				<h2 class="card__title">Бэкенд-антистресс</h2>
 				<p class="card__text">Если планируете решать задачи в тренажёре, берите два.</p>
 				<div class="card__row">
-					<button class="button card__button">В корзину</button>
+					<button class="button card__button">Купить</button>
 					<span class="card__price">1000 синапсов</span>
 				</div>
 			</div>
