--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,12 +4,15 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="theme-color" content="#000000" />
+
 	<link rel="icon" href="/favicon.ico" />
-	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#000000">
-	<meta name="msapplication-TileColor" content="#000000">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#000000">
+<meta name="msapplication-TileImage" content="/mstile-144x144.png">
+
+
 
 	<title>WebLarek</title>
 	<meta name="description" content="">
@@ -163,29 +166,30 @@
 		</div>
 	</template>
 
-	<template id="card-catalog">
-		<button class="gallery__item card">
-			<span class="card__category card__category_soft">софт-скил</span>
-			<h2 class="card__title">+1 час в сутках</h2>
-			<img class="card__image" src="<%=require('../images/Subtract.svg')%>" alt="" />
-			<span class="card__price">750 синапсов</span>
-		</button>
-	</template>
+<template id="card-catalog">
+  <button class="gallery__item card">
+    <span class="card__category"></span>
+    <h2 class="card__title"></h2>
+    <img class="card__image" src="<%= require('../images/Subtract.svg') %>" alt="" />
+    <span class="card__price"></span>
+  </button>
+</template>
 
-	<template id="card-preview">
-		<div class="card card_full">
-			<img class="card__image" src="<%=require('../images/Subtract.svg')%>" alt="" />
-			<div class="card__column">
-				<span class="card__category card__category_other">другое</span>
-				<h2 class="card__title">Бэкенд-антистресс</h2>
-				<p class="card__text">Если планируете решать задачи в тренажёре, берите два.</p>
-				<div class="card__row">
-					<button class="button card__button">Купить</button>
-					<span class="card__price">1000 синапсов</span>
-				</div>
-			</div>
-		</div>
-	</template>
+<template id="card-preview">
+  <div class="card card_full">
+    <img class="card__image" src="<%= require('../images/Subtract.svg') %>" alt="" />
+    <div class="card__column">
+      <span class="card__category"></span>
+      <h2 class="card__title"></h2>
+      <p class="card__text"></p>
+      <div class="card__row">
+        <button class="button card__button">Купить</button>
+        <span class="card__price"></span>
+      </div>
+    </div>
+  </div>
+</template>
+
 
 	<template id="card-basket">
 		<li class="basket__item card card_compact">
